fixes incorrect scrollbar override issue
Here the CSS for scrollbar-width is overriding the CSS which is defined in the main.css file (--scrollbar-width: calc(var(--font-size) * 0.6);) due to which the scrollbars are incorrectly loaded in the application

--- a/packages/insomnia/src/ui/css/styles.css
+++ b/packages/insomnia/src/ui/css/styles.css
@@ -12,9 +12,6 @@
 @tailwind components;
 @tailwind utilities;
 
-* {
-  scrollbar-width: thin;
-}
 
 html {
   font-size: 11px;
